# seaborn-paracoords

./: .gitignore  .pre-commit-config.yaml  AGGRESSIVE_WORKAROUND_PLAN.md  Agents.md  CATEGORICAL_AXES_FEATURE.md  CATEGORICAL_AXES_QUICKSTART.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  SEABORN_INTEGRATION_PLAN.md  SEABORN_OBJECTS_COMPARISON.md  SEABORN_WRAPPER_ADVANTAGES.md  TODOs.md  aggressive_workaround_demo.py  pyproject.toml
.cursor/: rules
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
scripts/: README.md  demo_auto_selection.py  demo_categorical_axes.py  demo_comparison.py  demo_custom_styling.py  demo_datasets.py  demo_iris.py  demo_iris_combined.py  demo_iris_horizontal.py  demo_iris_parallel.py  demo_iris_vertical.py  demo_normalization.py  demo_orientations.py  demo_scaling.py  demo_scaling_verification.py  demo_seaborn_contexts.py  demo_seaborn_contexts_horizontal.py  demo_seaborn_styles.py  demo_tips.py  parallel_demo.py  run_all_demos.py  test_new_features.py  test_seaborn_integration.py
src/seaborn_parallel/: __init__.py  parallelplot.py
tests/: test_parallelplot.py
