[project]
name = "seaborn-paracoords"
version = "0.0.3"
description = "A prototype implementation of parallel coordinates plots compatible with Seaborn's API and styling system."
authors = [{name = "Jannik Kissinger", email = "github@michelfe.it"}]
license = "MIT"
readme = "README.md"
keywords = ["visualization", "parallel-coordinates", "seaborn", "matplotlib", "data-analysis", "plotting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12,<4"
dependencies = [
    # https://numpy.org/neps/nep-0029-deprecation_policy.html
    "numpy<3,>=1.23; python_version >= '3.12'",
    "seaborn>=0.13.2",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/jannikmi/seaborn-paracoords"
Repository = "https://github.com/jannikmi/seaborn-paracoords"
Documentation = "https://github.com/jannikmi/seaborn-paracoords/blob/main/README.md"
"Bug Tracker" = "https://github.com/jannikmi/seaborn-paracoords/issues"
Changelog = "https://github.com/jannikmi/seaborn-paracoords/blob/main/CHANGELOG.md"


[dependency-groups]
test=[
    "pytest",
]
# development and parsing data
dev = [
    "tox",
    "pytest",
    "pre-commit",
    "mypy",
    "types-seaborn",
    "pandas-stubs",
    "isort",
    "ruff",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["seaborn_parallel"]


[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.pytest.ini_options]
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

# Ignore generated/low-level files that are hard to type properly
[[tool.mypy.overrides]]
module = [
]
ignore_errors = true

# Allow Any for complex numpy dtype cases
[[tool.mypy.overrides]]
module = [
]
allow_any_generics = true

# Use abi3audit to check wheel abi3 conformance
# A first line in command is a default value
[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "uvx abi3audit --strict --summary {wheel}",
]
[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "uvx abi3audit --strict --summary {wheel}",
]
[tool.cibuildwheel.windows]
repair-wheel-command = [
  "copy {wheel} {dest_dir}",
  "uvx abi3audit --strict --summary {wheel}",
]

# Pass the environment variable to build the abi3 support
[[tool.cibuildwheel.overrides]]
select = "*"
inherit.environment = "append"
environment.BUILD_ABI3 = "true"
